--- a/_config.yml
+++ b/_config.yml
@@ -86,5 +86,5 @@ search:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/zhuangtai/gouyaotuan.git
+  repo: https://gitee.com/hou1123/mishequnxyz.git
   branch: deploy
